--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,15 @@ body{
     position: absolute;
     border: 3px solid white;
     width: 85%;
-    height: 85vh;
+    height: 75vh;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+}
+
+audio{
+    position: relative;
+    z-index: 999;
+  
 }
 
